// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Container test should match snapshot test if the page is NOT loading 1`] = `
<section
  className="text-center min-h-screen transform translate-y-1/2"
>
  <h1
    className="text-gray-800 h1"
  >
    Loading...
  </h1>
</section>
`;

exports[`Loading Container test should match snapshot test if the page is loading 1`] = `
<section
  className="text-center min-h-screen transform translate-y-1/2"
>
  <h1
    className="text-gray-800 h1"
  >
    Loading...
  </h1>
  <span
    className="css-0"
  >
    <span
      className="css-ln2j55"
    />
    <span
      className="css-v3r7xv"
    />
    <span
      className="css-14rncnu"
    />
  </span>
</section>
`;
